...

    const val main_screen_container = "main_screen_container"
    const val second_screen_container = "second_screen_container"

    const val sign_in_email = "auth_sign_in_email"
    const val sign_in_password = "auth_sign_in_password"
    const val sign_in_password_visibility = "auth_sign_in_password_visibility"
    const val sign_in_submit = "auth_sign_in_submit"
    const val sign_in_google = "auth_sign_in_google"
    const val sign_in_forgot_password = "auth_sign_in_forgot_password"
    const val sign_in_sign_up = "auth_sign_in_sign_up"
    const val sign_up_username = "auth_sign_up_username"
    const val sign_up_email = "auth_sign_up_email"
    const val sign_up_password = "auth_sign_up_password"
    const val sign_up_password_visibility = "auth_sign_up_password_visibility"
    const val sign_up_submit = "auth_sign_up_submit"
    const val sign_up_sign_in = "auth_sign_up_sign_in"
...
